--- a/styles/sass/screen.scss
+++ b/styles/sass/screen.scss
@@ -133,7 +133,7 @@ nav {
     margin: 0 auto;
     color: hsl(19, 17%, 99%);
     ul {
-      list-style: none;
+      // list-style: none;
       padding: 0;
     }
 
@@ -144,6 +144,7 @@ nav {
     width: 60%;
     margin: 0 auto;
     top: -120px;
+    font-size: 1.3em;
     max-width: 800px;
 
     #aboutBox {
@@ -172,8 +173,19 @@ nav {
     margin-top: 30px;
     color: black;
     padding: 5px;
+    ul {
+      padding-left: 20px;
+      li {
+        padding-left: 5px;
+        list-style-type: square;
+      }
+    }
     h3 {
       font-size: 2.5em;
+    }
+    h4 {
+      margin-top: 20px;
+      font-size: 1.3em;
     }
   }
   #techList {
