--- a/styles/sass/screen.scss
+++ b/styles/sass/screen.scss
@@ -173,7 +173,9 @@ nav {
     margin-top: 30px;
     color: black;
     padding: 5px;
+
     ul {
+      line-height: 30px;
       padding-left: 20px;
       li {
         padding-left: 5px;
