--- a/views/about.html
+++ b/views/about.html
@@ -45,55 +45,35 @@
       <p>Attended <span>University of Maryland, Baltimore County</span></p>
     </div>
     <div id="essay">
-      <p>
-        <h3>Profile</h3>
+
+      <h3>{{vakdata.profile.title}}</h3>
+      <p>{{vakdata.profile.p}}</p>
+
+      <h3>{{vakdata.education.title}}</h3>
+      <p>{{vakdata.education.p}}</p>
+
+      <h3>{{vakdata.tech.title}}</h3>
+      <p ng-repeat="skill in vakdata.tech.section">
+          <strong>{{skill.header}}:</strong> {{skill.info}}
       </p>
-      <p>
-        Front-end web developer, experienced with large variety of web technologies. Based out of Maryland/ Virginia/ Washington DC Metropolitan area. Specialties include responsive web design, high quality UI/ UX building, and on-time delivery of projects & assignments.
-      </p>
-      <p>
-        <h3>Education</h3>
-      </p>
-      <p>
-        University of Maryland, Baltimore County. Bachelor of Science in Computer Science 2016. Concentration in Web Development
-      </p>
-      <p>
-        <h3>Technical Skills</h3>
-      </p>
-      <p>
-        <strong>Programming Languages:</strong> JavaScript, CSS, Sass/LESS, HTML, JSON, AJAX
-      </p>
-      <p>
-        <strong>Frameworks/Libraries:</strong> AngularJS, Node.js, jQuery, Bootstrap
-      </p>
-      <p>
-        <strong>Software:</strong> Adobe Creative Suite, Microsoft Office, Adobe Acrobat, Terminal, ATOM, Sublime Text 3, Compass
-      </p>
-      <p>
-        <strong>Operating Systems:</strong> Microsoft Windows, Mac OS X
-      </p>
-      <p>
-        <strong>Miscellaneous:</strong> Agile workflows, SCRUM framework, responsive web design, UI/UX design
-      </p>
-      <p>
-        <h3>Experience</h3>
-      </p>
-        <h4><strong>MyGym</strong></h4>
-      <p>
-        Web Developer
-      </p>
-        <ul>
-          <li>Designed and created responsive features and pages to branch website using AngularJS, HTML, and CSS</li>
-          <li>Crafted high quality components using in-line, CSS3, and Bootstrap—in accordance with best practices</li>
-          <li>Resolved technical issues by efficiently troubleshooting code, utilizing Node.js, and accessing every available knowledgebase.</li>
-          <li>Effectively prioritized between multiple web development and maintenance projects</li>
-          <li>Practiced SCRUM methodology alongside our Creative Director and instructional team</li>
-          <li>Worked with Lead Developer & Creative Director to create the best user-experience for our company’s online presence </li>
-          <li>Quickly handled expedited requests and deadlines using Agile program management</li>
-          <li>Enhanced the visual presentation of the content & layouts of our company website by unit and integration testing every update</li>
-          <li>Updated content, graphics, and code when assisting in managing email blast programs</li>
-        </ul>
-      <textarea ng-model="testing"></textarea>
+
+      <h3>{{vakdata.exp.title}}</h3>
+      <div ng-repeat="job in vakdata.exp.jobs">
+
+        <h4><strong>{{job.comp}}</strong></h4>
+
+        <p>{{job.pos}}</p>
+
+        <div ng-repeat="dut in job.duties">
+          <ul>
+            <li>
+              {{dut}}
+            </li>
+          </ul>
+        </div>
+
+      </div>
+
 
 
     </div>
