--- a/views/navbar.html
+++ b/views/navbar.html
@@ -27,7 +27,14 @@
         <li>
 					<a class="hvr-float" href="#!/gallery" onclick="this.blur();">
 						<i class="fa fa-user-circle" aria-hidden="true"></i>
-						Art Gallery
+						Art
+					</a>
+				</li>
+
+				<li>
+					<a class="hvr-float" href="#!/videos" onclick="this.blur();">
+						<i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+						Videos
 					</a>
 				</li>
 
