--- a/styles/sass/screen.scss
+++ b/styles/sass/screen.scss
@@ -102,7 +102,7 @@ nav {
   }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1060px) {
   .navbar-brand {
     visibility: hidden;
   }
@@ -175,7 +175,7 @@ nav {
     padding: 5px;
 
     ul {
-      line-height: 30px;
+      line-height: 23px;
       padding-left: 20px;
       li {
         padding-left: 5px;
@@ -188,6 +188,7 @@ nav {
     h4 {
       margin-top: 20px;
       font-size: 1.3em;
+      text-decoration: underline;
     }
   }
   #techList {
@@ -297,6 +298,28 @@ nav {
       border: 1px solid $primaryColor;
       margin-bottom: 30px;
       &:focus { outline: none; }
+    }
+  }
+}
+#videos {
+  flex: 1;
+  .thumbnail {
+    height: 275px;
+    outline: 0;
+    border: none;
+    position: relative;
+    img {
+      object-fit: cover;
+      height: 265px;
+      width: 180%;
+      border-radius: 10px;
+      position: absolute;
+      text-align: center;
+      margin-top: -133px;
+      top: 50%;
+      padding: 3px;
+      border: 2px solid grey;
+      box-shadow: 0 3px 10px rgba(100, 100, 100, .5);
     }
   }
 }
@@ -426,6 +449,9 @@ nav {
 .list.animated:nth-child(7) { animation-delay: 8.6s; }
 .list.animated:nth-child(8) { animation-delay: 9.2s; }
 .list.animated:nth-child(9) { animation-delay: 9.8s; }
+.list.animated:nth-child(10) { animation-delay: 10.4s; }
+.list.animated:nth-child(11) { animation-delay: 11.0s; }
+
 
 @keyframes fadeInDown {
   from {
